# Cpu-Usage-Tracker

./: .gitignore  CMakeLists.txt  README.md
include/: analyzer.h  printer.h
src/: analyzer.c  analyzer.h  cpu_usage.c  cpu_usage.h  main.c  printer.c  reader.c  reader.h  watchdog.c  watchdog.h
src/modules/: analyzer.c  cpu_usage.c  printer.c  reader.c
tests/: CMakeLists.txt  analyzer.c  reader.c
